--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic Apppps are lololol
+  <title>Ionic Apppps are looser
   </title>
 
   <base href="/" />
